@@ -3,4 +3,5 @@
 	    <script type="text/javascript" src="/scripts/localstorage.js"></script>
 	    <script type="text/javascript" src="/scripts/background.js"></script>
 	</head>
+	<body onload="countDeezerTabs()"></body>
 </html>
